# lightweight-wol-webui

./: .gitignore  Cargo.toml  LICENSE  Rocket.toml  build.rs  build_frontend_to_local.bat  readme.md  resources.rc
frontend/: .env.development  .env.production  .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: app.html  config.ts
frontend/src/globalstyles/: auth.scss
frontend/src/routes/: +layout.svelte
frontend/src/routes/[...path]/: +page.svelte
frontend/src/routes/edit/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/main/: +page.svelte
frontend/src/routes/setup/: +page.svelte
frontend/src/server/: device.ts
frontend/src/util/: errorParser.ts  loginManager.ts
frontend/static/: manifest.webmanifest
src/: api.rs  auth.rs  config.rs  db.rs  error.rs  jwt.rs  main.rs  module.rs
src/api/: catcher.rs  device_api.rs  user_api.rs
src/db/: device.rs  token.rs  user.rs
src/module/: auth.rs  jwt.rs  magic_packet.rs
test/: join.http
